RxLifeCycle With Mvp Library complete

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Mar 09 14:24:00 CST 2016
+#Mon Mar 14 10:02:01 CST 2016
+#在执行gradlew bintrayUpload 命令时注意要注释下面的代理，有时使用代理会长传不成功
 systemProp.http.proxyHost=127.0.0.1
 systemProp.http.proxyPort=8087
