--- a/rxlifecyclemvp/build.gradle
+++ b/rxlifecyclemvp/build.gradle
@@ -27,8 +27,10 @@
 //    compile rootProject.ext.mosbyMvp
 //}
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.novoda.bintray-release'//添加
+
+//apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.jfrog.bintray'
 // 这个version是区分library版本的，因此当我们需要更新library时记得修改这个version
 
 android {
@@ -39,7 +41,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "0.5.0"
+        versionName rootProject.ext.rxLifeWithMvpVersion
     }
     buildTypes {
         release {
@@ -49,7 +51,7 @@ android {
     }
 }
 
-apply from: "https://raw.githubusercontent.com/xiaopansky/android-library-publish-to-jcenter/master/bintrayUpload.gradle"
+//apply from: "https://raw.githubusercontent.com/xiaopansky/android-library-publish-to-jcenter/master/bintrayUpload.gradle"
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -58,6 +60,18 @@ dependencies {
     compile rootProject.ext.rxLifecycle
     compile rootProject.ext.rxLifecycleComponents
     compile rootProject.ext.mosbyMvp
+}
+
+//添加
+publish {
+    artifactId = 'rxlifecyclemvp'//项目名称
+    userOrg = rootProject.userOrg
+    groupId = rootProject.groupId
+    uploadName = rootProject.uploadName
+    publishVersion = rootProject.publishVersion
+    desc = rootProject.description
+    website = rootProject.website
+    licences = rootProject.licences
 }
 
 //task sourcesJar(type: Jar) {
