--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:2.1.2"
-        classpath "com.novoda:bintray-release:0.3.4" //添加
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8' // 为编译时注解提供支持
+        classpath "com.novoda:bintray-release:0.3.4" //提供上传到bintray
 //        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6"
 //        classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
         //classpath "com.github.dcendents:android-maven-plugin:1.2"
@@ -27,12 +28,18 @@ task clean(type: Delete) {
 
 //def rxLifeWithMvp = "0.5.0"
 def rxLifeCycleVersion = "0.6.1"
-def supportVersion = "23.4.0"
+def supportVersion = "24.1.1"
 def mosbyMvpVersion = "2.0.1"
+def butterKnifeVersion = "8.2.1"
+def daggerVersion = "2.6"
+def loggerVersion = "1.15"
+def rxJavaVersion = "1.1.8"
+def rxAndroidVersion = "1.2.1"
+def rxBindingVersion = "0.4.0"
 
 ext{
 
-    rxLifeWithMvpVersion = "0.6.1"
+    rxLifeWithMvpVersion = "0.6.2"
 
     //-------- bintray config -----------
     userOrg = "wind0ws"//bintray.com用户名
@@ -46,19 +53,39 @@ ext{
 
 
 
-
     minSdkVersion = 14
-    compileSdkVersion = 23
+    compileSdkVersion = 24
     targetSdkVersion = compileSdkVersion
-    buildToolsVersion = "23.0.3"
+    buildToolsVersion = "24.0.1"
+    abortOnLintError = false
+    checkLintRelease = false
+    useJack = false
+    abortOnLintError = false
 
     // Define all dependencies in the base project, to unify & make it easy to update
     junit = "junit:junit:4.12"
     supportV4 = "com.android.support:support-v4:${supportVersion}"
     appCompat = "com.android.support:appcompat-v7:${supportVersion}"
+    supportDesign = "com.android.support:design:${supportVersion}"
+    supportAnnotations = "com.android.support:support-annotations:${supportVersion}"
+    cardView = "com.android.support:cardview-v7:${supportVersion}"
+    recyclerView = "com.android.support:recyclerview-v7:${supportVersion}"
     rxLifecycle = "com.trello:rxlifecycle:${rxLifeCycleVersion}"
     rxLifecycleComponents = "com.trello:rxlifecycle-components:${rxLifeCycleVersion}"
     mosbyMvp = "com.hannesdorfmann.mosby:mvp:${mosbyMvpVersion}"
     mosbyMvpViewState = "com.hannesdorfmann.mosby:viewstate:${mosbyMvpVersion}"
+
+    //Test App
+    butterKnife = "com.jakewharton:butterknife:${butterKnifeVersion}"
+    butterKnifeCompiler = "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
+    javaxAnnotation = "org.glassfish:javax.annotation:10.0-b28"
+    daggerCompiler = "com.google.dagger:dagger-compiler:${daggerVersion}"
+    dagger = "com.google.dagger:dagger:${daggerVersion}"
+    logger = "com.orhanobut:logger:${loggerVersion}"
+    rxJava = "io.reactivex:rxjava:${rxJavaVersion}"
+    rxAndroid = "io.reactivex:rxandroid:${rxAndroidVersion}"
+    rxBinding = "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}"
+
+
 
 }
