--- a/rxlifecyclemvp/build.gradle
+++ b/rxlifecyclemvp/build.gradle
@@ -56,10 +56,29 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile rootProject.ext.junit
-    provided rootProject.ext.appCompat
-    provided rootProject.ext.rxLifecycle
-    provided rootProject.ext.rxLifecycleComponents
-    provided rootProject.ext.mosbyMvp
+    compile rootProject.ext.appCompat
+    compile rootProject.ext.supportAnnotations
+    compile rootProject.ext.rxJava
+    compile(rootProject.ext.rxAndroid) {
+        exclude group: 'io.reactivex', module: 'rxjava'
+    }
+    compile(rootProject.ext.rxBinding){
+        exclude group: 'io.reactivex', module: 'rxjava'
+        exclude group: 'io.reactivex', module: 'rxandroid'
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    compile(rootProject.ext.rxLifecycle){
+        exclude group: 'io.reactivex', module: 'rxjava'
+        exclude group: 'com.jakewharton.rxbinding',module: 'rxbinding'
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    compile(rootProject.ext.rxLifecycleComponents){
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude group: 'io.reactivex', module: 'rxjava'
+    }
+    compile(rootProject.ext.mosbyMvp){
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+    }
 }
 
 //添加
