--- a/rxlifecyclewithmvpviewstate/build.gradle
+++ b/rxlifecyclewithmvpviewstate/build.gradle
@@ -27,8 +27,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile rootProject.ext.junit
-    provided rootProject.ext.appCompat
-    provided rootProject.ext.mosbyMvpViewState
+    compile rootProject.ext.appCompat
+    compile rootProject.ext.mosbyMvpViewState
     compile project(':rxlifecyclemvp')
 }
 
